infra/kubernetes/06-rabbitmq-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-broker
  namespace: delivery-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      # CRITICAL: Pins the broker to your master infrastructure node (server-241)
      nodeSelector:
        topology.kubernetes.io/role: master-infra
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management
          volumeMounts:
            - name: rabbitmq-storage
              mountPath: /var/lib/rabbitmq
          # Resiliency: RabbitMQ can take a moment to boot. We wait 15s before probing.
          readinessProbe:
            tcpSocket:
              port: 5672
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: rabbitmq-storage
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: delivery-platform
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
  type: ClusterIP
