infra/kubernetes/08-stateless-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hono-core-test
  namespace: delivery-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hono-core
  template:
    metadata:
      labels:
        app: hono-core
    spec:
      # (server-242)
      nodeSelector:
        topology.kubernetes.io/role: worker-compute
      containers:
        - name: echo-server
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: hono-core-service
  namespace: delivery-platform
spec:
  selector:
    app: hono-core
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-tracking-test
  namespace: delivery-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-tracking
  template:
    metadata:
      labels:
        app: go-tracking
    spec:
      # (server-242)
      nodeSelector:
        topology.kubernetes.io/role: worker-compute
      containers:
        - name: echo-server
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: go-tracking-service
  namespace: delivery-platform
spec:
  selector:
    app: go-tracking
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
